# GlassTracker_ARUCO

./: CMakeLists.txt  camera2.yml  main.cpp
include/: AzureKinect.hh  run_options.hh
src/: calibrate_camera_charuco.cpp  create_marker.cpp  detect_marker.cpp
